--- a/assets/styles/_media.scss
+++ b/assets/styles/_media.scss
@@ -4441,7 +4441,7 @@
                         display: none;
                     }
 
-                    .right {
+                    .rightt {
                         display: flex;
                         align-items: center;
                         position: relative;
